# v2ray-dual-region

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  generate_vmess_config_qr.py  pyproject.toml
server/scripts/: setup-exit.sh  setup-relay.sh
terraform/: .terraform.lock.hcl  deploy.sh  main.tf  provider.tf  variables.tf
