[tool.poetry]
name = "v2ray-dual-region"
version = "1.0.0"
description = "Dual-hop V2Ray VPN deployment with Terraform and a QR code config generator"
authors = ["Chris White <chrisrwhite.crw@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
qrcode = {extras = ["pil"], version = "^8.1"}

[tool.poetry.scripts]
generate-qr = "generate_vmess_config_qr:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"